--- a/APIDatVe/APIDatVe/Content/Site.css
+++ b/APIDatVe/APIDatVe/Content/Site.css
@@ -15,3 +15,7 @@ select,
 textarea {
     max-width: 280px;
 }
+
+    input[type=email], input[type=url], input[type=search], input[type=tel], input[type=color], input[type=text], input[type=password], input[type=datetime], input[type=datetime-local], input[type=date], input[type=month], input[type=time], input[type=week], input[type=number], textarea {
+        padding: 3px 4px 4px !important;
+    }
