--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                         <li class="open">
                             <a href="/QuanLyGiaGhe/GiaGhe">
                                 <i class="menu-icon fa fa-caret-right"></i>
-                                Quản lý giá ghế
+                                Quản lý bảng giá
                             </a>
                             <b class="arrow"></b>
                         </li>
@@ -127,7 +127,7 @@
                     <a href="#" class="dropdown-toggle">
                         <i class="menu-icon fa fa-code-fork"></i>
                         <span class="menu-text">
-                            Lộ trình &amp; ĐCC
+                            Lộ trình &amp; ĐTC
                         </span>
                         <b class="arrow fa fa-angle-down"></b>
                     </a>
@@ -144,6 +144,20 @@
                             <a href="/QuanLyDiemChungChuyen/DanhSachDiemCC">
                                 <i class="menu-icon fa fa-caret-right"></i>
                                 Quản lý điểm chung chuyển
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="open">
+                            <a href="/QuanLyTinhThanh/DanhSachTinhThanh">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý tỉnh thành
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="open">
+                            <a href="/QuanLyKip/DanhSachKip">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý kip
                             </a>
                             <b class="arrow"></b>
                         </li>
@@ -231,6 +245,20 @@
                             <a href="/QuanLyTaiKhoan/DanhSachTaiKhoan">
                                 <i class="menu-icon fa fa-caret-right"></i>
                                 Cấu hình
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="open">
+                            <a href="/QuanLyChucVu/DanhSachChucVu">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý chức vụ
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="open">
+                            <a href="/QuanLyQuyen/DanhSachQuyen">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý danh sách quyền
                             </a>
                             <b class="arrow"></b>
                         </li>
