--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDiemChungChuyen/DanhSachDiemCC.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDiemChungChuyen/DanhSachDiemCC.cshtml
@@ -1,74 +1,291 @@
 ﻿
 @{
-    ViewBag.Title = "Quản lý điểm chung chuyển";
+    ViewBag.Title = "Quản lý điểm trung chuyển";
 }
-
-<div class="page-content">
+<div class="page-content" ng-controller="controller">
     <div class="page-header">
         <h1>
-            Quản lý điểm chung chuyển
+            Lộ trình & DTC
+            <small>
+                <i class="ace-icon fa fa-angle-double-right"></i>
+                Quản lý điểm trung chuyển
+            </small>
         </h1>
     </div>
     <div class="row">
         <div class="col-xs-12">
             <div class="table-header">
-                Quản lý điểm chung chuyển
+                Quản lý điểm trung chuyển
                 <div class="pull-right tableTools-container"></div>
-                <button class="btn btn-success pull-right btn-sm" style="margin: 4px;">Thêm mới</button>
+                <button class="btn btn-success pull-right btn-sm" style="margin: 4px;" ng-click="add()">Thêm mới</button>
             </div>
             <div>
                 <table id="dynamic-table" class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th class="center">#</th>
-                            <th>TP Xuất phát</th>
-                            <th>Mã CC</th>
-                            <th>Địa điểm</th>
-                            <th>Thời gian</th>
-                            <th>Ghi chú</th>
+                            <th>Tỉnh thành</th>
+                            <th>Mã điểm trung chuyển</th>
+                            <th>Tên điểm trung chuyển</th>
+                            <th>Địa chỉ</th>
+                            <th class="center">Trạng thái</th>
                             <th class="center">Thao tác</th>
                         </tr>
                     </thead>
-
-                    <tbody>
-                        @for (int i = 1; i < 20; i++)
-                        {
-                            <tr>
-                                <td class="center">
-                                    <label class="pos-rel">@i</label>
-                                </td>
-                                <td>
-                                    <span>TP Xuất phát @i</span>
-                                </td>
-                                <td>
-                                    <span>Mã CC @i</span>
-                                </td>
-                                <td>
-                                    <span>Địa điểm @i</span>
-                                </td>
-                                <td><span>Thời gian @i</span></td>
-                                <td><span>Ghi chú @i</span></td>
-                                <td class="center">
-                                    <div class="action-buttons">
-                                        <a class="blue" href="#">
-                                            <i class="ace-icon fa fa-search-plus bigger-130"></i>
-                                        </a>
-
-                                        <a class="green" href="#">
-                                            <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                        </a>
-
-                                        <a class="red" href="#">
-                                            <i class="ace-icon fa fa-trash-o bigger-130"></i>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                    <tbody ng-cloak>
+                        <tr ng-repeat="item in datas.diemTrungChuyens">
+                            <td class="center">
+                                <label class="pos-rel">{{$index + 1}}</label>
+                            </td>
+                            <td>
+                                {{item.tentinh}}
+                            </td>
+                            <td>
+                                {{item.madiemtrungchuyen}}
+                            </td>
+                            <td>
+                                {{item.tendiemtrungchuyen}}
+                            </td>
+                            <td>
+                                {{item.diachi}}
+                            </td>
+                            <td class="center">
+                                <span ng-if="item.trangthai == 1">Hoạt động</span>
+                                <span ng-if="item.trangthai != 1">Ngưng hoạt động</span>
+                            </td>
+                            <td class="center">
+                                <div class="action-buttons">
+                                    <a class="green" ng-click="getThongTinDTC(item.madiemtrungchuyen)">
+                                        Chi tiết
+                                    </a>
+                                    <a class="red" ng-click="confirmChangeStatus(item.madiemtrungchuyen)">
+                                        <span ng-if="item.trangthai != 1">Hoạt động</span>
+                                        <span ng-if="item.trangthai == 1">Ngưng hoạt động</span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-xs-6">
+                    <select ng-model="filter._sobanghi" class="col-xs-2" convert-to-number ng-change="getDanhSachDTC()">
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
+                <div class="col-xs-6">
+                    <span style="float:right;margin-top: 3px;"> {{datas.sobanghi}} bản ghi</span>
+                    <input type="number" min="1" max="{{datas.sobanghi % filter._sobanghi == 0?datas.sobanghi / filter._sobanghi:datas.sobanghi / filter._sobanghi + 1}}" name="name" ng-model="filter._trang" ng-change="getDanhSachDTC()" class="col-xs-2" style="float:right;margin-right:50px;height: 27px;margin-right:15px" />
+                    <label style="float:right;margin-right:10px;margin-top: 3px;">Trang</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Thông tin điểm trung chuyển</h3>
+                </div>
+                <div class="modal-body">
+                    <p><span class="require">(*)</span> Thông tin trường bắt buộc</p>
+                    <div class="row">
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tỉnh thành <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.matinh" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in tinhthanhs" value="{{item.matinh}}">{{item.tentinh}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Mã điểm trung chuyển <span class="require">(*)</span> </label>
+                                <div>
+                                    <input type="text" ng-disabled="!isAdd" ng-model="detail.madiemtrungchuyen" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tên điểm trung chuyển <span class="require">(*)</span></label>
+                                <div>
+                                    <input type="text" ng-model="detail.tendiemtrungchuyen" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Địa chỉ <span class="require">(*)</span></label>
+                                <div>
+                                    <input type="text" ng-model="detail.diachi" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Trạng thái</label>
+                                <div>
+                                    <select ng-model="detail.trangthai" convert-to-number class="col-xs-12">
+                                        <option value="1">Hoạt động</option>
+                                        <option value="-1">Ngưng hoạt động</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-success" ng-click="submit()">Lưu</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="modalDelete" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Xác nhận thông tin</h3>
+                </div>
+                <div class="modal-body">
+                    <span>Bạn có chắc chắn muốn thay đổi bản ghi này?</span>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-danger" ng-click="changeStatus()">Xác nhận</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<script src="~/Scripts/dataTable.js"></script>
+<script>
+    var urlGetTinhThanh = 'http://localhost:56893/api/tinhthanh/ready';
+    var urlGet = 'http://localhost:56893/api/diemtrungchuyen';
+    var urlDetail = 'http://localhost:56893/api/diemtrungchuyen/detail';
+    var urlPost = 'http://localhost:56893/api/diemtrungchuyen/post';
+    var urlPut = 'http://localhost:56893/api/diemtrungchuyen/put';
+    var urlDelete = 'http://localhost:56893/api/diemtrungchuyen/change-status';
+    app.controller('controller', ['$scope', '$http', function ($scope, $http) {
+        $scope.filter = {
+            _tukhoa: '',
+            _trang: 1,
+            _sobanghi: 100
+        }
+        $scope.datas = [];
+        $scope.madiemtrungchuyen = "";
+        $scope.isAdd = true;
+        $scope.detail = {};
+        $scope.getDanhSachDTC = function () {
+            $http({
+                url: urlGet,
+                method: "GET",
+                params: $scope.filter
+            }).then(function success(response) {
+                $scope.datas = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.getDanhSachTinhThanh = function () {
+            $http({
+                url: urlGetTinhThanh,
+                method: "GET"
+            }).then(function success(response) {
+                $scope.tinhthanhs = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.add = function () {
+            $scope.isAdd = true;
+            $scope.detail = {
+                matinh: '',
+                madiemtrungchuyen: '',
+                tendiemtrungchuyen: '',
+                diachi: '',
+                trangthai: 1
+            }
+            $("#modal").modal();
+        }
+        $scope.getThongTinDTC = function (_madiemtrungchuyen) {
+            $scope.isAdd = false;
+            $http({
+                url: urlDetail,
+                method: "GET",
+                params: {
+                    _madiemtrungchuyen
+                }
+            }).then(function success(response) {
+                $scope.detail = response.data;
+                console.log($scope.detail)
+                $("#modal").modal();
+            }, function error(response) {
+                alert(response.data.Message);
+            })
+        };
+        $scope.submit = function () {
+            if ($scope.detail.madiemtrungchuyen == "" || $scope.detail.matinh == "" || $scope.detail.tendiemtrungchuyen == "") {
+                alert("Vui lòng nhập đủ thông tin")
+                return;
+            }
+            if ($scope.isAdd) {
+                $http({
+                    url: urlPost,
+                    method: "POST",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachDTC();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+            else {
+                $http({
+                    url: urlPut,
+                    method: "PUT",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachDTC();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+        }
+        $scope.confirmChangeStatus = function (_madiemtrungchuyen) {
+            $scope.madiemtrungchuyen = _madiemtrungchuyen;
+            $("#modalDelete").modal();
+        }
+        $scope.changeStatus = function () {
+            $http({
+                url: urlDelete,
+                method: "GET",
+                params: {
+                    _madiemtrungchuyen: $scope.madiemtrungchuyen
+                }
+            }).then(function success(response) {
+                $("#modalDelete").modal("hide");
+                $scope.getDanhSachDTC();
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+                $("#modalDelete").modal("hide");
+            })
+        }
+        $scope.getDanhSachTinhThanh();
+        $scope.getDanhSachDTC();
+    }]);
+</script>
