--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyGiaGhe/GiaGhe.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyGiaGhe/GiaGhe.cshtml
@@ -1,113 +1,268 @@
 ﻿
 @{
-    ViewBag.Title = "Quản lý giá ghế";
+    ViewBag.Title = "Quản lý bảng giá";
 }
-
-<div class="page-content">
+<div class="page-content" ng-controller="controller">
     <div class="page-header">
         <h1>
-            Quản lý giá ghế
+            Quản lý xe & ghế
+            <small>
+                <i class="ace-icon fa fa-angle-double-right"></i>
+                Quản lý bảng giá
+            </small>
         </h1>
     </div>
     <div class="row">
         <div class="col-xs-12">
             <div class="table-header">
-                Quản lý giá ghế
+                Quản lý lộ trình
                 <div class="pull-right tableTools-container"></div>
+                <button class="btn btn-success pull-right btn-sm" style="margin: 4px;" ng-click="add()">Thêm mới</button>
             </div>
             <div>
                 <table id="dynamic-table" class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th class="center">#</th>
-                            <th>Tên xe</th>
-                            <th>Loại xe</th>
-                            <th>Biển số</th>
-                            <th>Giá người lớn</th>
-                            <th>Giá trẻ em</th>
+                            <th>Tỉnh đón</th>
+                            <th>Điểm trung chuyển đón</th>
+                            <th>Tỉnh trả</th>
+                            <th>Điểm trung chuyển trả</th>
+                            <th>Giá vé</th>
+                            <th>Thời gian dự kiến</th>
                             <th class="center">Thao tác</th>
                         </tr>
                     </thead>
-
-                    <tbody>
-                        @for (int i = 1; i < 20; i++)
-                        {
-                            <tr>
-                                <td class="center">
-                                    <label class="pos-rel">@i</label>
-                                </td>
-                                <td>
-                                    <span>Tên xe @i</span>
-                                </td>
-                                <td>
-                                    <span>Loại xe @i</span>
-                                </td>
-                                <td><span>Biển số @i</span></td>
-                                <td><span>@i</span></td>
-                                <td><span>@i</span></td>
-                                <td class="center">
-                                    <div class="action-buttons">
-                                        <a class="green" onclick="showModalInfo()">
-                                            <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                    <tbody ng-cloak>
+                        <tr ng-repeat="item in datas.bangGias">
+                            <td class="center">
+                                <label class="pos-rel">{{$index + 1}}</label>
+                            </td>
+                            <td>
+                                {{item.tentinhdon}}
+                            </td>
+                            <td>
+                                {{item.tendiemtrungchuyendon}}
+                            </td>
+                            <td>
+                                {{item.tentinhtra}}
+                            </td>
+                            <td>
+                                {{item.tendiemtrungchuyentra}}
+                            </td>
+                            <td>
+                                {{item.giave}}
+                            </td>
+                            <td>
+                                {{item.thoigiandukien}}
+                            </td>
+                            <td class="center">
+                                <div class="action-buttons">
+                                    <a class="green" ng-click="getThongTinBangGia(item.banggiaId)">
+                                        Chi tiết
+                                    </a>
+                                    <a class="red" ng-click="confirmDelete(item.banggiaId)">
+                                        <span>Xóa</span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-    </div>
-</div>
-
-<div id="modal" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="smaller lighter blue no-margin">Thông tin giá ghế</h3>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-xs-6">
+                    <select ng-model="filter._sobanghi" class="col-xs-2" convert-to-number ng-change="getDanhSachBangGia()">
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
+                <div class="col-xs-6">
+                    <span style="float:right;margin-top: 3px;"> {{datas.sobanghi}} bản ghi</span>
+                    <input type="number" min="1" max="{{datas.sobanghi % filter._sobanghi == 0?datas.sobanghi / filter._sobanghi:datas.sobanghi / filter._sobanghi + 1}}" name="name" ng-model="filter._trang" ng-change="getDanhSachBangGia()" class="col-xs-2" style="float:right;margin-right:50px;height: 27px;margin-right:15px" />
+                    <label style="float:right;margin-right:10px;margin-top: 3px;">Trang</label>
+                </div>
             </div>
+        </div>
+    </div>
 
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Tên xe</label>
-                            <div>
-                                <input disabled type="text" class="col-xs-12" />
+    <div id="modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Thông tin lộ trình</h3>
+                </div>
+                <div class="modal-body">
+                    <p><span class="require">(*)</span> Thông tin trường bắt buộc</p>
+                    <div class="row">
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Điểm trung chuyển đón <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.madiemtrungchuyendon" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in diemtrungchuyens" value="{{item.madiemtrungchuyen}}">{{item.tendiemtrungchuyen}}</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Giá người lớn</label>
-                            <div>
-                                <input type="text" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Điểm trung chuyển trả <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.madiemtrungchuyentra" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in diemtrungchuyens" value="{{item.madiemtrungchuyen}}">{{item.tendiemtrungchuyen}}</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Giá trẻ em</label>
-                            <div>
-                                <input type="text" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Giá vé <span class="require">(*)</span> </label>
+                                <div>
+                                    <input type="text" ng-model="detail.giave" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right"> Thời gian dự kiến <span class="require">(*)</span></label>
+                                <div>
+                                    <input type="number" min="1" ng-model="detail.thoigiandukien" class="col-xs-12" />
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-success" ng-click="submit()">Lưu</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
             </div>
-            <div class="modal-footer text-right">
-                <button class="btn btn-sm btn-success">Lưu</button>
-                <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+        </div>
+    </div>
+    <div id="modalDelete" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Xác nhận thông tin</h3>
+                </div>
+                <div class="modal-body">
+                    <span>Bạn có chắc chắn muốn thay đổi bản ghi này?</span>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-danger" ng-click="changeStatus()">Xác nhận</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<script src="~/Scripts/dataTable.js"></script>
 <script>
-    function showModalInfo() {
-        $("#modal").modal();
-    }
+    var urlGetDiemTrungChuyen = 'http://localhost:56893/api/diemtrungchuyen/ready';
+    var urlGet = 'http://localhost:56893/api/banggia';
+    var urlDetail = 'http://localhost:56893/api/banggia/detail';
+    var urlPost = 'http://localhost:56893/api/banggia/post';
+    var urlPut = 'http://localhost:56893/api/banggia/put';
+    var urlDelete = 'http://localhost:56893/api/banggia/delete';
+    app.controller('controller', ['$scope', '$http', function ($scope, $http) {
+        $scope.filter = {
+            _madiemtrungchuyendon: '',
+            _madiemtrungchuyentra: '',
+            _trang: 1,
+            _sobanghi: 100
+        }
+        $scope.datas = [];
+        $scope.banggiaId = "";
+        $scope.detail = {};
+        $scope.getDanhSachBangGia = function () {
+            $http({
+                url: urlGet,
+                method: "GET",
+                params: $scope.filter
+            }).then(function success(response) {
+                $scope.datas = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.getDanhSachDiemTrungChuyen = function () {
+            $http({
+                url: urlGetDiemTrungChuyen,
+                method: "GET"
+            }).then(function success(response) {
+                $scope.diemtrungchuyens = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.add = function () {
+            $scope.detail = {
+                madiemtrungchuyendon: '',
+                madiemtrungchuyentra: '',
+                giave: 0,
+                thoigiandukien: 8
+            }
+            $("#modal").modal();
+        }
+        $scope.getThongTinBangGia = function (_banggiaId) {
+            $http({
+                url: urlDetail,
+                method: "GET",
+                params: {
+                    _banggiaId
+                }
+            }).then(function success(response) {
+                $scope.detail = response.data;
+                console.log($scope.detail)
+                $("#modal").modal();
+            }, function error(response) {
+                alert(response.data.Message);
+            })
+        };
+        $scope.submit = function () {
+            if ($scope.detail.madiemtrungchuyendon == "" || $scope.detail.madiemtrungchuyentra == "" || $scope.detail.giave == "") {
+                alert("Vui lòng nhập đủ thông tin")
+                return;
+            }
+            $http({
+                url: urlPut,
+                method: "PUT",
+                data: $scope.detail
+            }).then(function success(response) {
+                $scope.getDanhSachBangGia();
+                $("#modal").modal("hide");
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        }
+        $scope.confirmDelete = function (_banggiaId) {
+            $scope.banggiaId = _banggiaId;
+            $("#modalDelete").modal();
+        }
+        $scope.changeStatus = function () {
+            $http({
+                url: urlDelete,
+                method: "DELETE",
+                params: {
+                    _banggiaId: $scope.banggiaId
+                }
+            }).then(function success(response) {
+                $("#modalDelete").modal("hide");
+                $scope.getDanhSachBangGia();
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+                $("#modalDelete").modal("hide");
+            })
+        }
+        $scope.getDanhSachDiemTrungChuyen();
+        $scope.getDanhSachBangGia();
+    }]);
 </script>
