--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyLoTrinh/DanhSachLoTrinh.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyLoTrinh/DanhSachLoTrinh.cshtml
@@ -2,11 +2,14 @@
 @{
     ViewBag.Title = "Quản lý lộ trình";
 }
-
-<div class="page-content">
+<div class="page-content" ng-controller="controller">
     <div class="page-header">
         <h1>
-            Quản lý lộ trình
+            Lộ trình & DTC
+            <small>
+                <i class="ace-icon fa fa-angle-double-right"></i>
+                Quản lý lộ trình
+            </small>
         </h1>
     </div>
     <div class="row">
@@ -14,56 +17,285 @@
             <div class="table-header">
                 Quản lý lộ trình
                 <div class="pull-right tableTools-container"></div>
+                <button class="btn btn-success pull-right btn-sm" style="margin: 4px;" ng-click="add()">Thêm mới</button>
             </div>
             <div>
                 <table id="dynamic-table" class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th class="center">#</th>
+                            <th>Tỉnh đón</th>
+                            <th>Tỉnh trả</th>
                             <th>Mã lộ trình</th>
                             <th>Tên lộ trình</th>
-                            <th>Ghi chú</th>
+                            <th>Thời gian dự kiến</th>
                             <th class="center">Thao tác</th>
                         </tr>
                     </thead>
-
-                    <tbody>
-                        @for (int i = 1; i < 20; i++)
-                        {
-                            <tr>
-                                <td class="center">
-                                    <label class="pos-rel">@i</label>
-                                </td>
-                                <td>
-                                    <label class="pos-rel">Mã @i</label>
-                                </td>
-                                <td>
-                                    <span>Tên lộ trình @i</span>
-                                </td>
-                                <td>
-                                    <span>Ghi chú @i</span>
-                                </td>
-                                <td class="center">
-                                    <div class="action-buttons">
-                                        <a class="blue" href="#">
-                                            <i class="ace-icon fa fa-search-plus bigger-130"></i>
-                                        </a>
-
-                                        <a class="green" href="#">
-                                            <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                        </a>
-
-                                        <a class="red" href="#">
-                                            <i class="ace-icon fa fa-trash-o bigger-130"></i>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                    <tbody ng-cloak>
+                        <tr ng-repeat="item in datas.loTrinhs">
+                            <td class="center">
+                                <label class="pos-rel">{{$index + 1}}</label>
+                            </td>
+                            <td>
+                                {{item.tentinhdon}}
+                            </td>
+                            <td>
+                                {{item.tentinhtra}}
+                            </td>
+                            <td>
+                                {{item.malotrinh}}
+                            </td>
+                            <td>
+                                {{item.tenlotrinh}}
+                            </td>
+                            <td>
+                                {{item.khoangthoigiandukien}}
+                            </td>
+                            <td class="center">
+                                <div class="action-buttons">
+                                    <a class="green" ng-click="getThongTinLoTrinh(item.malotrinh)">
+                                        Chi tiết
+                                    </a>
+                                    <a class="red" ng-click="confirmDelete(item.malotrinh)">
+                                        <span>Xóa</span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-xs-6">
+                    <select ng-model="filter._sobanghi" class="col-xs-2" convert-to-number ng-change="getDanhSachLoTrinh()">
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
+                <div class="col-xs-6">
+                    <span style="float:right;margin-top: 3px;"> {{datas.sobanghi}} bản ghi</span>
+                    <input type="number" min="1" max="{{datas.sobanghi % filter._sobanghi == 0?datas.sobanghi / filter._sobanghi:datas.sobanghi / filter._sobanghi + 1}}" name="name" ng-model="filter._trang" ng-change="getDanhSachLoTrinh()" class="col-xs-2" style="float:right;margin-right:50px;height: 27px;margin-right:15px" />
+                    <label style="float:right;margin-right:10px;margin-top: 3px;">Trang</label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Thông tin lộ trình</h3>
+                </div>
+                <div class="modal-body">
+                    <p><span class="require">(*)</span> Thông tin trường bắt buộc</p>
+                    <div class="row">
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tỉnh thành đón <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.matinhdon" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in tinhthanhs" value="{{item.matinh}}">{{item.tentinh}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tỉnh thành trả <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.matinhtra" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in tinhthanhs" value="{{item.matinh}}">{{item.tentinh}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Mã lộ trình <span class="require">(*)</span> </label>
+                                <div>
+                                    <input type="text" ng-disabled="!isAdd" ng-model="detail.malotrinh" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tên lộ trình <span class="require">(*)</span></label>
+                                <div>
+                                    <input type="text" ng-model="detail.tenlotrinh" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right"> Thời gian dự kiến <span class="require">(*)</span></label>
+                                <div>
+                                    <input type="number" min="1" ng-model="detail.khoangthoigiandukien" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Trạng thái</label>
+                                <div>
+                                    <select ng-model="detail.trangthai" convert-to-number class="col-xs-12">
+                                        <option value="1">Hoạt động</option>
+                                        <option value="-1">Ngưng hoạt động</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-success" ng-click="submit()">Lưu</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="modalDelete" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Xác nhận thông tin</h3>
+                </div>
+                <div class="modal-body">
+                    <span>Bạn có chắc chắn muốn thay đổi bản ghi này?</span>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-danger" ng-click="changeStatus()">Xác nhận</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<script src="~/Scripts/dataTable.js"></script>
+<script>
+    var urlGetTinhThanh = 'http://localhost:56893/api/tinhthanh/ready';
+    var urlGet = 'http://localhost:56893/api/lotrinh';
+    var urlDetail = 'http://localhost:56893/api/lotrinh/detail';
+    var urlPost = 'http://localhost:56893/api/lotrinh/post';
+    var urlPut = 'http://localhost:56893/api/lotrinh/put';
+    var urlDelete = 'http://localhost:56893/api/lotrinh/delete';
+    app.controller('controller', ['$scope', '$http', function ($scope, $http) {
+        $scope.filter = {
+            _tukhoa: '',
+            _matinh: '',
+            _trang: 1,
+            _sobanghi: 100
+        }
+        $scope.datas = [];
+        $scope.malotrinh = "";
+        $scope.isAdd = true;
+        $scope.detail = {};
+        $scope.getDanhSachLoTrinh = function () {
+            $http({
+                url: urlGet,
+                method: "GET",
+                params: $scope.filter
+            }).then(function success(response) {
+                $scope.datas = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.getDanhSachTinhThanh = function () {
+            $http({
+                url: urlGetTinhThanh,
+                method: "GET"
+            }).then(function success(response) {
+                $scope.tinhthanhs = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.add = function () {
+            $scope.isAdd = true;
+            $scope.detail = {
+                malotrinh: '',
+                matinhtra: '',
+                matinhdon: '',
+                tenlotrinh: '',
+                khoangthoigiandukien: 8
+            }
+            $("#modal").modal();
+        }
+        $scope.getThongTinLoTrinh = function (_malotrinh) {
+            $scope.isAdd = false;
+            $http({
+                url: urlDetail,
+                method: "GET",
+                params: {
+                    _malotrinh
+                }
+            }).then(function success(response) {
+                $scope.detail = response.data;
+                console.log($scope.detail)
+                $("#modal").modal();
+            }, function error(response) {
+                alert(response.data.Message);
+            })
+        };
+        $scope.submit = function () {
+            if ($scope.detail.malotrinh == "" || $scope.detail.tenlotrinh == "" || $scope.detail.matinhdon == "" || $scope.detail.matinhtra == "") {
+                alert("Vui lòng nhập đủ thông tin")
+                return;
+            }
+            if ($scope.isAdd) {
+                $http({
+                    url: urlPost,
+                    method: "POST",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachLoTrinh();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+            else {
+                $http({
+                    url: urlPut,
+                    method: "PUT",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachLoTrinh();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+        }
+        $scope.confirmDelete = function (_malotrinh) {
+            $scope.malotrinh = _malotrinh;
+            $("#modalDelete").modal();
+        }
+        $scope.changeStatus = function () {
+            $http({
+                url: urlDelete,
+                method: "DELETE",
+                params: {
+                    _malotrinh: $scope.malotrinh
+                }
+            }).then(function success(response) {
+                $("#modalDelete").modal("hide");
+                $scope.getDanhSachLoTrinh();
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+                $("#modalDelete").modal("hide");
+            })
+        }
+        $scope.getDanhSachTinhThanh();
+        $scope.getDanhSachLoTrinh();
+    }]);
+</script>
