--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/DanhSachTaiKhoan.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/DanhSachTaiKhoan.cshtml
@@ -1,12 +1,15 @@
 ﻿
 @{
-    ViewBag.Title = "Quản lý tài khoản";
+    ViewBag.Title = "Danh sách tài khoản";
 }
-
-<div class="page-content">
+<div class="page-content" ng-controller="controller">
     <div class="page-header">
         <h1>
-            Danh sách tài khoản
+            Quản lý tài khoản
+            <small>
+                <i class="ace-icon fa fa-angle-double-right"></i>
+                Danh sách tài khoản
+            </small>
         </h1>
     </div>
     <div class="row">
@@ -14,147 +17,288 @@
             <div class="table-header">
                 Danh sách tài khoản
                 <div class="pull-right tableTools-container"></div>
+                <button class="btn btn-success pull-right btn-sm" style="margin: 4px;" ng-click="add()">Thêm mới</button>
             </div>
             <div>
                 <table id="dynamic-table" class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th class="center">#</th>
-                            <th>Tên tài khoản</th>
                             <th>Quyền</th>
+                            <th>Tên tài khoản</th>
+                            <th>Họ tên</th>
                             <th>Email</th>
-                            <th class="center">Lần đăng nhập gần nhất</th>
+                            <th class="center">Trạng thái</th>
                             <th class="center">Thao tác</th>
                         </tr>
                     </thead>
-
-                    <tbody>
-                        @for (int i = 1; i < 20; i++)
-                        {
-                            <tr>
-                                <td class="center">
-                                    <label class="pos-rel">@i</label>
-                                </td>
-                                <td>
-                                    <span>Tài khoản @i</span>
-                                </td>
-                                <td>
-                                    <span>Quyền @i</span>
-                                </td>
-                                <td>
-                                    <span>Email_@i@@gmail.com</span>
-                                </td>
-                                <td class="center">
-                                    <span>@DateTime.Now.ToString("dd/MM/yyyy HH:mm")</span>
-                                </td>
-                                <td class="center">
-                                    <div class="action-buttons">
-                                        <a class="green" onclick="showModalInfo()">
-                                            <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                        </a>
-                                        <a class="red" onclick="showModalDelete()">
-                                            <i class="ace-icon fa fa-trash-o bigger-130"></i>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
+                    <tbody ng-cloak>
+                        <tr ng-repeat="item in datas.taiKhoans">
+                            <td class="center">
+                                <label class="pos-rel">{{$index + 1}}</label>
+                            </td>
+                            <td>
+                                {{item.tenquyen}}
+                            </td>
+                            <td>
+                                {{item.tentaikhoan}}
+                            </td>
+                            <td>
+                                {{item.hoten}}
+                            </td>
+                            <td>
+                                {{item.email}}
+                            </td>
+                            <td class="center">
+                                <span ng-if="item.trangthai == 1">Hoạt động</span>
+                                <span ng-if="item.trangthai != 1">Ngưng hoạt động</span>
+                            </td>
+                            <td class="center">
+                                <div class="action-buttons">
+                                    <a class="green" ng-click="getThongTinTaiKhoan(item.tentaikhoan)">
+                                        Chi tiết
+                                    </a>
+                                    <a class="red" ng-click="confirmChangeStatus(item.tentaikhoan)">
+                                        <span ng-if="item.trangthai != 1">Hoạt động</span>
+                                        <span ng-if="item.trangthai == 1">Ngưng hoạt động</span>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-    </div>
-</div>
-
-<div id="modal" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="smaller lighter blue no-margin">Thông tin tài khoản</h3>
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-xs-6">
+                    <select ng-model="filter._sobanghi" class="col-xs-2" convert-to-number ng-change="getDanhSachTaiKhoan()">
+                        <option value="10">10</option>
+                        <option value="20">20</option>
+                        <option value="50">50</option>
+                        <option value="100">100</option>
+                    </select>
+                </div>
+                <div class="col-xs-6">
+                    <span style="float:right;margin-top: 3px;"> {{datas.sobanghi}} bản ghi</span>
+                    <input type="number" min="1" max="{{datas.sobanghi % filter._sobanghi == 0?datas.sobanghi / filter._sobanghi:datas.sobanghi / filter._sobanghi + 1}}" name="name" ng-model="filter._trang" ng-change="getDanhSachTaiKhoan()" class="col-xs-2" style="float:right;margin-right:50px;height: 27px;margin-right:15px" />
+                    <label style="float:right;margin-right:10px;margin-top: 3px;">Trang</label>
+                </div>
             </div>
+        </div>
+    </div>
 
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Quyền</label>
-                            <div>
-                                <select class="col-xs-12">
-                                    <option value="">Chọn...</option>
-                                    @for (var i = 0; i < 5; i++)
-                                    {
-                                        <option value="@i">Quyền @i</option>
-                                    }
-                                </select>
+    <div id="modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Thông tin tài khoản</h3>
+                </div>
+                <div class="modal-body">
+                    <p><span class="require">(*)</span> Thông tin trường bắt buộc</p>
+                    <div class="row">
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Quyền <span class="require">(*)</span> </label>
+                                <div>
+                                    <select ng-model="detail.maquyen" class="col-xs-12">
+                                        <option value="">Chọn...</option>
+                                        <option ng-repeat="item in quyens" value="{{item.maquyen}}">{{item.tenquyen}}</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Tên tài khoản</label>
-                            <div>
-                                <input type="text" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Tên tài khoản <span class="require">(*)</span> </label>
+                                <div>
+                                    <input type="text" ng-disabled="!isAdd" ng-model="detail.tentaikhoan" class="col-xs-12" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Mật khẩu</label>
-                            <div>
-                                <input type="password" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Mật khẩu <span ng-if="isAdd" class="require">(*)</span> </label>
+                                <div>
+                                    <input type="password" ng-model="detail.matkhau" class="col-xs-12" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Nhập lại mật khẩu</label>
-                            <div>
-                                <input type="password" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Họ tên</label>
+                                <div>
+                                    <input type="text" ng-model="detail.hoten" class="col-xs-12" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12 margin-md-bottom">
-                        <div class="form-group">
-                            <label class="control-label no-padding-right">Email</label>
-                            <div>
-                                <input type="text" class="col-xs-12" />
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Email</label>
+                                <div>
+                                    <input type="text" ng-model="detail.email" class="col-xs-12" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <div class="form-group">
+                                <label class="control-label no-padding-right">Trạng thái</label>
+                                <div>
+                                    <select ng-model="detail.trangthai" convert-to-number class="col-xs-12">
+                                        <option value="1">Hoạt động</option>
+                                        <option value="-1">Ngưng hoạt động</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-success" ng-click="submit()">Lưu</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
             </div>
-            <div class="modal-footer text-right">
-                <button class="btn btn-sm btn-success">Lưu</button>
-                <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+        </div>
+    </div>
+    <div id="modalDelete" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Xác nhận thông tin</h3>
+                </div>
+                <div class="modal-body">
+                    <span>Bạn có chắc chắn muốn thay đổi bản ghi này?</span>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-danger" ng-click="changeStatus()">Xác nhận</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div id="modalDelete" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h3 class="smaller lighter blue no-margin">Xác nhận thông tin</h3>
-            </div>
-
-            <div class="modal-body">
-                <span>Bạn có chắc chắn muốn xóa bản ghi này?</span>
-            </div>
-            <div class="modal-footer text-right">
-                <button class="btn btn-sm btn-danger">Xóa</button>
-                <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="~/Scripts/dataTable.js"></script>
 <script>
-    function showModalInfo(action) {
-        $("#modal").modal();
-    }
-    function showModalDelete() {
-        $("#modalDelete").modal();
-    }
+    var urlGetQuyen = 'http://localhost:56893/api/quyen/getall';
+    var urlGet = 'http://localhost:56893/api/taikhoan';
+    var urlDetail = 'http://localhost:56893/api/taikhoan/detail';
+    var urlPost = 'http://localhost:56893/api/taikhoan/post';
+    var urlPut = 'http://localhost:56893/api/taikhoan/put';
+    var urlDelete = 'http://localhost:56893/api/taikhoan/change-status';
+    app.controller('controller', ['$scope', '$http', function ($scope, $http) {
+        $scope.filter = {
+            _tukhoa: '',
+            _trang: 1,
+            _sobanghi: 100
+        }
+        $scope.datas = [];
+        $scope.tentaikhoan = "";
+        $scope.isAdd = true;
+        $scope.detail = {};
+        $scope.getDanhSachTaiKhoan = function () {
+            $http({
+                url: urlGet,
+                method: "GET",
+                params: $scope.filter
+            }).then(function success(response) {
+                $scope.datas = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.getDanhSachQuyen = function () {
+            $http({
+                url: urlGetQuyen,
+                method: "GET"
+            }).then(function success(response) {
+                $scope.quyens = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.add = function () {
+            $scope.isAdd = true;
+            $scope.detail = {
+                tentaikhoan: '',
+                maquyen: '',
+                matkhau: '',
+                hoten: '',
+                email: '',
+                trangthai: 1
+            }
+            $("#modal").modal();
+        }
+        $scope.getThongTinTaiKhoan = function (_tentaikhoan) {
+            $scope.isAdd = false;
+            $http({
+                url: urlDetail,
+                method: "GET",
+                params: {
+                    _tentaikhoan
+                }
+            }).then(function success(response) {
+                $scope.detail = response.data;
+                console.log($scope.detail)
+                $("#modal").modal();
+            }, function error(response) {
+                alert(response.data.Message);
+            })
+        };
+        $scope.submit = function () {
+            if ($scope.detail.tentaikhoan == "" || $scope.detail.maquyen == "") {
+                alert("Vui lòng nhập đủ thông tin")
+                return;
+            }
+            if ($scope.isAdd) {
+                if ($scope.detail.matkhau == "") {
+                    alert("Vui lòng nhập đủ thông tin")
+                    return;
+                }
+                $http({
+                    url: urlPost,
+                    method: "POST",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachTaiKhoan();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+            else {
+                $http({
+                    url: urlPut,
+                    method: "PUT",
+                    data: $scope.detail
+                }).then(function success(response) {
+                    $scope.getDanhSachTaiKhoan();
+                    $("#modal").modal("hide");
+                }, function error(response) {
+                    alert("Thực hiện không thành công");
+                })
+            }
+        }
+        $scope.confirmChangeStatus = function (_tentaikhoan) {
+            $scope.tentaikhoan = _tentaikhoan;
+            $("#modalDelete").modal();
+        }
+        $scope.changeStatus = function () {
+            $http({
+                url: urlDelete,
+                method: "GET",
+                params: {
+                    _tentaikhoan: $scope.tentaikhoan
+                }
+            }).then(function success(response) {
+                $("#modalDelete").modal("hide");
+                $scope.getDanhSachTaiKhoan();
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+                $("#modalDelete").modal("hide");
+            })
+        }
+        $scope.getDanhSachQuyen();
+        $scope.getDanhSachTaiKhoan();
+    }]);
 </script>
