--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDiemChungChuyen/DanhSachDiemCC.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDiemChungChuyen/DanhSachDiemCC.cshtml
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-md-12 margin-md-bottom">
                             <div class="form-group">
-                                <label class="control-label no-padding-right">Địa chỉ <span class="require">(*)</span></label>
+                                <label class="control-label no-padding-right">Địa chỉ</label>
                                 <div>
                                     <input type="text" ng-model="detail.diachi" class="col-xs-12" />
                                 </div>
