--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
@@ -256,6 +256,13 @@
                             <b class="arrow"></b>
                         </li>
                         <li class="open">
+                            <a href="/QuanLyNhanVien/DanhSachNhanVien">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý nhân viên
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="open">
                             <a href="/QuanLyQuyen/DanhSachQuyen">
                                 <i class="menu-icon fa fa-caret-right"></i>
                                 Quản lý danh sách quyền
